--- a/ComputerNetworks/科学上网相关的经验分享.md
+++ b/ComputerNetworks/科学上网相关的经验分享.md
@@ -1,12 +1,12 @@
 ---
 title: 科学上网相关的经验分享
 description: 科学上网相关的经验分享
+categories:
+- ComputerNetworks
 tags:
 - 加密通讯
 - 流量伪装
 - 科学上网
-categories:
-- ComputerNetworks
 date: 2022-04-25T23:33:27+08:00
 year: 2022
 week: 17
@@ -25,7 +25,7 @@ updated: 2022-04-25T23:33:27+08:00
   * Macbook Pro 15, 17 年
   * Macbook M1 max, 21 年
 
-### shadowrocket
+## shadowrocket
 
 **性价比最高**
 
@@ -33,7 +33,7 @@ updated: 2022-04-25T23:33:27+08:00
 
 ![](https://cdn.jsdelivr.net/gh/HaoweiCh/imgs/EE8CC03EB3E6F13379F3C3563D307509D5EC8EE9.webp)
 
-#### 针对 x86 平台
+### 针对 x86 平台
 
 由于新功能 universal control 实在太香，目前两台常用，毕竟再买个这样的屏幕参数实在是太贵。
 
@@ -44,7 +44,7 @@ updated: 2022-04-25T23:33:27+08:00
   * 我同时和 little snitch 防火墙一起使用不冲突
   * 没有上架 MAS
 
-### surge
+## surge
 
 surge 功能的强大不容置疑，界面设计也挺好看的。
 
@@ -53,7 +53,7 @@ surge 功能的强大不容置疑，界面设计也挺好看的。
   * 害怕将网络底层权限完全交给一个未知的软件，这个不是被迫害妄想症，而是一个自我保护本能。
 * apple sillicon 上用不到
 
-### 软路由
+## 软路由
 
 设备推荐可以见我其他博文
 
@@ -67,7 +67,7 @@ surge 功能的强大不容置疑，界面设计也挺好看的。
   * 规则列表一处维护所有设备生效
 * 不用考虑花时间教家庭成员如何使用...
 
-### 其他工具以供参考
+## 其他工具以供参考
 
 * Quantumult x
 * Loon
@@ -78,7 +78,7 @@ surge 功能的强大不容置疑，界面设计也挺好看的。
   * 开源
   * mac 客户端 clash x 
 
-### 关于机场，我简单说两句
+## 关于机场，我简单说两句
 
 先介绍一下背景，我比较喜欢折腾且服务器相关的设置我不喜欢依赖别人，对云服务部署我都是自己操作，对我来说搭服务非常简单 （10 min）。
 
