--- a/DevOps/静态博客搭建和美化.md
+++ b/DevOps/静态博客搭建和美化.md
@@ -1,9 +1,9 @@
 ---
 title: 静态博客搭建和美化
-tags:
-- hexo
 categories:
 - DevOps
+tags:
+- hexo
 date: 2018-09-01T09:35:59+08:00
 year: 2018
 week: 35
@@ -25,7 +25,7 @@ updated: 2018-09-17T09:35:59+08:00
 
 按理来讲博客文章更应该看重质量, 博客实现细节也应该是展现技术实力的空间。
 
-### 一些脚本
+## 一些脚本
 
 ```bash
 # npm install hexo-cli -g
@@ -38,9 +38,9 @@ hexo server
 ```
 
 
-### issue
+## issue
 
-#### Mac 推荐使用 POW
+### Mac 推荐使用 POW
 > Pow 是一个 Mac 系统上的零配置 Rack 服务器，它也可以作为一个简单易用的静态文件服务器来使用。
 >  
 > PS：生成后本机刷新页面就可以看到生成效果，比较方便。
@@ -49,15 +49,15 @@ hexo server
 > http://pow.cx/
 
 
-#### Next 主题 5.* 升级到 6.* 的时候换了仓库(换成 Next 官方库了)
+### Next 主题 5.* 升级到 6.* 的时候换了仓库(换成 Next 官方库了)
 > 官方文档 https://github.com/theme-next/hexo-theme-next/blob/master/docs/zh-CN/UPDATE-FROM-5.1.X.md
 
 * 从 v6.0.3版本起，zh-Hans改名为zh-CN：需要显式修改_config.xml里的language配置，否则语言显示会退回到默认的英文
 
-#### 官方推荐使用 数据文件
+### 官方推荐使用 数据文件
 https://github.com/theme-next/hexo-theme-next/blob/master/docs/zh-CN/DATA-FILES.md
 
-#### 主页文章加阴影
+### 主页文章加阴影
 
 在 `themes/next/source/css/_custom/custom.styl` 添加以下 CSS 代码
 
@@ -71,7 +71,7 @@ https://github.com/theme-next/hexo-theme-next/blob/master/docs/zh-CN/DATA-FILES.
 }
 ```
 
-#### 文章底部标签文字#改成图标
+### 文章底部标签文字#改成图标
 
 修改模板 `themes/next/layout/_macro/post.swig`
 搜索 `rel="tag">#`，将 `#`换成   
@@ -80,7 +80,7 @@ https://github.com/theme-next/hexo-theme-next/blob/master/docs/zh-CN/DATA-FILES.
 <i class="fa fa-tag"></i>
 ```
 
-#### 点击出桃心
+### 点击出桃心
 
 ```
 cd themes/next/source/js/src
@@ -93,7 +93,7 @@ wget http://7u2ss1.com1.z0.glb.clouddn.com/love.js
 <script type="text/javascript" src="/js/src/love.js"></script>
 ```
 
-#### 调皮的博客标题
+### 调皮的博客标题
 
 修改文件 `themes/next/layout_layout.swig`
 
