--- a/Languages/时间相关的类型转换.md
+++ b/Languages/时间相关的类型转换.md
@@ -1,14 +1,14 @@
 ---
 title: 时间相关的类型转换
 description: 时间相关的类型转换
+categories:
+- Languages
 tags:
 - Python
 - time
 - datetime
 - timestamp
 - CheatSheet
-categories:
-- Languages
 date: 2017-06-13T18:03:09+08:00
 year: 2017
 week: 24
@@ -22,7 +22,7 @@ python时间相关的库和转换关系
 ![](https://cdn.jsdelivr.net/gh/HaoweiCh/imgs/2DFD43E7E5FA4C963C8058DCFB28D9DF56B3ACEE.webp)
 
 
-### string 类型(time)
+## string 类型(time)
 
 ```python
 import time
@@ -35,7 +35,7 @@ t = time.strptime(s, "%Y-%m-%d %H:%M:%S")
 
 ```
 
-### datetime 对象
+## datetime 对象
 
 ```python
 import datetime
@@ -51,7 +51,7 @@ time_tuple = dt_obj.timetuple()
 time_stamp = dt_obj.timestamp()
 
 ```
-### time 对象
+## time 对象
 
 ```python
 import time
@@ -66,7 +66,7 @@ datetime.datetime(*time_tuple[0:6])
 time.mktime(time_tuple)
 ```
 
-### int 类型(时间戳)
+## int 类型(时间戳)
 
 ```python
 import time, datetime
@@ -78,9 +78,9 @@ datetime.datetime.fromtimestamp(timestamp) # 本地时区时间
 # 转换为 time对象
 time.localtime(timestamp)
 ```
-### 带时区的处理
+## 带时区的处理
 
-#### 转换为 datetime对象
+### 转换为 datetime对象
 
 ```python
 import time, datetime
@@ -91,7 +91,7 @@ datetime.datetime.fromtimestamp(timestamp)
 datetime.datetime.utcfromtimestamp(timestamp)
 ```
 
-#### 转换为 time对象
+### 转换为 time对象
 
 ```python
 # 本地时区
