--- a/Languages/简单聊聊值类型引用类型.md
+++ b/Languages/简单聊聊值类型引用类型.md
@@ -1,11 +1,11 @@
 ---
 title: 简单聊聊值类型引用类型
 description: 简单聊聊值类型引用类型
+categories:
+- Languages
 tags:
 - Golang
 - 语言细节
-categories:
-- Languages
 date: 2022-04-04T13:04:44+08:00
 year: 2022
 week: 14
@@ -20,14 +20,14 @@ With 'reference types' in Go, do we have to worry about pointers if we want to p
 
 <!-- more -->
 
-### 背景
+## 背景
 > 总结 Udemy 上 Golang 入门课程再次学习 
 > 这个购买于当初尝试入门 Golang 语言的时候  
 > 现在以相对已经熟悉 Golang 语言的知识储备来进行复盘学习
 
-### Go 语言中的值类型函数参数需要担心原始数据被修改
+## Go 语言中的值类型函数参数需要担心原始数据被修改
 
-#### WHAT: 哪些类型属于值类型
+### WHAT: 哪些类型属于值类型
 
 * int
 * float
@@ -35,15 +35,15 @@ With 'reference types' in Go, do we have to worry about pointers if we want to p
 * bool
 * structs
 
-#### HOW: 怎么更容易理解这个概念
+### HOW: 怎么更容易理解这个概念
 
 最清晰的方法之一:
 
 struct 实例(instance)的 method receiver 是 pointer 的话实例可被修改, 是 value 的话会被浅拷贝
 
-### Go 语言中的引用类型函数参数不需要考虑原始数据被修改
+## Go 语言中的引用类型函数参数不需要考虑原始数据被修改
 
-#### WAHT: 哪些类型属于引用类型
+### WAHT: 哪些类型属于引用类型
 
 * slices
 * maps 
@@ -51,11 +51,11 @@ struct 实例(instance)的 method receiver 是 pointer 的话实例可被修改,
 * pointers
 * functions
 
-#### HOW: 怎么更容易理解这个概念
+### HOW: 怎么更容易理解这个概念
 
 Pointer 我们可修改，Pointer 的 Pointer 我们修改的是在当前上下文新建的值，而修改不了原始数据
 
-### Take is cheap, show me the code
+## Take is cheap, show me the code
 
 ```goalng
 package main
