--- a/Middleware/关于消息队列的一些想法和积累.md
+++ b/Middleware/关于消息队列的一些想法和积累.md
@@ -1,12 +1,12 @@
 ---
 title: 关于消息队列的一些想法和积累
 description: 关于消息队列的一些想法和积累
+categories:
+- Middleware
 tags:
 - Python
 - 消息队列
 - celery
-categories:
-- Middleware
 date: 2018-09-02T09:36:31+08:00
 year: 2018
 week: 35
@@ -21,15 +21,15 @@ updated: 2018-09-17T11:28:31+08:00
 
 <!-- more -->
 
-### 设计
+## 设计
 
-#### 任务长度应该尽量小
+### 任务长度应该尽量小
 
 * https://stackoverflow.com/questions/31692107/celery-and-long-running-tasks
 
 长耗时任务还带来更新耗时更长的问题。当需要更新程序的时候，由于还有任务在执行，只能使用`kill -9 ****` 来强制结束进程（带来不可恢复的任务终止，在某些情况下是不可采取的操作）。
 
-##### 不可避免的长耗时任务处理方法
+#### 不可避免的长耗时任务处理方法
  长耗时任务虽然不能说不好但应该尽量避免。
  长耗时任务应该被分割开到独立的队列，并启动只处理指定队列的worker。
 
@@ -45,12 +45,12 @@ def add(x, y):
 celery -A tasks worker -Q add
 ```
  
-##### 并发模式
+#### 并发模式
 * http://docs.celeryproject.org/en/latest/userguide/concurrency/eventlet.html#concurrency-eventlet
 
 
-### ISSUE
-#### ROOT模式上不能启动
+## ISSUE
+### ROOT模式上不能启动
 
 Running a worker with superuser privileges when the
 worker accepts messages serialized with pickle is a very bad idea!
