--- a/ComputerNetworks/科学上网相关的经验分享.md
+++ b/ComputerNetworks/科学上网相关的经验分享.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 科学上网相关的经验分享
 categories:
 - ComputerNetworks
@@ -10,7 +10,7 @@ date: 2022-04-25T23:33:27+08:00
 year: 2022
 week: 17
 updated: 2022-04-25T23:33:27+08:00
----
+```
 
 ![](https://cdn.jsdelivr.net/gh/Dreamacro/clash/docs/logo.png)
 
