--- a/Languages/简单聊聊值类型引用类型.md
+++ b/Languages/简单聊聊值类型引用类型.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 简单聊聊值类型引用类型
 categories:
 - Languages
@@ -9,7 +9,7 @@ date: 2022-04-04T13:04:44+08:00
 year: 2022
 week: 14
 updated: 2022-04-04T13:04:44+08:00
----
+```
 
 ![](https://cdn.jsdelivr.net/gh/HaoweiCh/imgs/9362C06ADAF6AD7780134DA807B83553C8458683.webp)
 
