--- a/Middleware/关于消息队列的一些想法和积累.md
+++ b/Middleware/关于消息队列的一些想法和积累.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 关于消息队列的一些想法和积累
 categories:
 - Middleware
@@ -10,7 +10,7 @@ date: 2018-09-02T09:36:31+08:00
 year: 2018
 week: 35
 updated: 2018-09-17T11:28:31+08:00
----
+```
 
 关于消息队列的一些想法和积累
 
