--- a/SocialScience/<人月神话> - 为什么巴比伦塔会失败.md
+++ b/SocialScience/<人月神话> - 为什么巴比伦塔会失败.md
@@ -1,5 +1,5 @@
----
-title: 《人月神话》 - 为什么巴比伦塔会失败
+```yaml
+title: <人月神话> - 为什么巴比伦塔会失败
 categories:
 - SocialScience
 tags:
@@ -10,7 +10,7 @@ date: 2021-12-11T07:38:21+08:00
 year: 2021
 week: 49
 updated: 2021-12-11T07:38:21+08:00
----
+```
 
 ![](https://cdn.jsdelivr.net/gh/HaoweiCh/imgs/D27F92AE2D5CFFE4316B028057A1ED266B0828F8.webp)
 
