--- a/SocialScience/<人月神话> - 第二章 “人月神话”.md
+++ b/SocialScience/<人月神话> - 第二章 “人月神话”.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: <人月神话> - 第二章 “人月神话”
 categories:
 - SocialScience
@@ -10,7 +10,7 @@ date: 2021-12-09T04:19:07+08:00
 year: 2021
 week: 49
 updated: 2021-12-13T07:35:33+08:00
----
+```
 
 ![](https://cdn.jsdelivr.net/gh/HaoweiCh/imgs/4DF63DBDC5D7372750DA02418780642E42E21AD4.webp)
 
