--- a/SocialScience/鲁迅 聪明人，傻子和奴才.md
+++ b/SocialScience/鲁迅 聪明人，傻子和奴才.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 鲁迅 聪明人，傻子和奴才
 categories:
 - SocialScience
@@ -9,7 +9,7 @@ date: 2021-12-07T12:45:32+08:00
 year: 2021
 week: 49
 updated: 2021-12-13T07:06:39+08:00
----
+```
 
 几十年前鲁迅的《聪明人和傻子和奴才》写道:
 
