--- a/DevOps/静态博客搭建和美化.md
+++ b/DevOps/静态博客搭建和美化.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 静态博客搭建和美化
 categories:
 - DevOps
@@ -8,7 +8,7 @@ date: 2018-09-01T09:35:59+08:00
 year: 2018
 week: 35
 updated: 2018-09-17T09:35:59+08:00
----
+```
 
 > 专注于记录和分析及总结出有深度的思考.
 > off the limits and learn something new.
