--- a/Languages/时间相关的类型转换.md
+++ b/Languages/时间相关的类型转换.md
@@ -1,4 +1,4 @@
----
+```yaml
 title: 时间相关的类型转换
 categories:
 - Languages
@@ -12,7 +12,7 @@ date: 2017-06-13T18:03:09+08:00
 year: 2017
 week: 24
 updated: 2017-07-13T18:03:09+08:00
----
+```
 
 python时间相关的库和转换关系
 
